# douban-album-downloader

./: .envrc  .eslintrc  .gitignore  CLAUDE.md  README.md  app.html  electron.vite.config.ts  flake.nix  index.html  main.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
.github/workflows/: release.yml
src/: .eslintrc  .eslintrc.cjs  app.js  main.js  main.ts  preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: .eslintrc  app.tsx  constants.js  main.tsx  store.ts
src/app/features/downloads/: DownloadList.tsx  downloadsSlice.ts
src/app/features/url-input/: URLInput.tsx
src/app/redux/: actionTypes.js  actions.js
src/components/: download-list.js  url-input.js
src/main/: main.ts
src/preload/: .eslintrc  index.d.ts  preload.js  preload.ts
src/redux/: actions.js  events.js  store.js
src/redux/reducers/: index.js  step.js
src/renderer/: .eslintrc.cjs  AlbumPattern.ts  AlbumUrlForm.vue  App.vue  DownloadList.vue  ProgressBar.vue  index.html  main.ts  tauri-bridge.ts  tsconfig.json
todo/: 01-concurrency-limiting.md  02-error-handling-page-fetching.md  03-download-cancellation.md  04-request-timeouts.md  05-add-lint-script.md  06-add-tests.md  07-improve-readme.md  08-pagination-progress-feedback.md  09-tighten-csp.md  10-pause-resume.md  11-image-filtering.md  12-drag-and-drop-url.md  13-auto-update.md  14-dark-mode.md
(+3 files in other folders)
